// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AudioButton Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <button
    className="sc-bdvvtL fZQeXN"
    onClick={[Function]}
  />
  <audio
    autoPlay={false}
    src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-13.mp3"
  />
</div>
`;

exports[`Storyshots AudioButton Playing 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <button
    className="sc-bdvvtL fZQeXN"
    onClick={[Function]}
  />
  <audio
    autoPlay={false}
    src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-13.mp3"
  />
</div>
`;

exports[`Storyshots Button Default 1`] = `
<button
  className="sc-dkPtRN doeNQV"
  data-large={false}
  onClick={[Function]}
>
  按鈕
</button>
`;

exports[`Storyshots Button Primary 1`] = `
<button
  className="sc-dkPtRN doeNQV"
  data-large={false}
  onClick={[Function]}
>
  按鈕
</button>
`;

exports[`Storyshots Button Primary Outline 1`] = `
<button
  className="sc-dkPtRN erzFDq"
  data-large={false}
  onClick={[Function]}
>
  按鈕
</button>
`;

exports[`Storyshots Button Secondary 1`] = `
<button
  className="sc-dkPtRN bvmbqx"
  data-large={false}
  onClick={[Function]}
>
  按鈕
</button>
`;

exports[`Storyshots Button Secondary Outline 1`] = `
<button
  className="sc-dkPtRN fPUQHW"
  data-large={false}
  onClick={[Function]}
>
  按鈕
</button>
`;

exports[`Storyshots CompleteButton Default 1`] = `
<button
  className="sc-eCImPb CimIN"
>
  TASK COMPLETED
</button>
`;

exports[`Storyshots CountPanel Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    className="sc-furwcr fYIddm"
  >
    <div
      className="sc-jRQBWg jCCcHD"
    >
      <p
        className="sc-gKclnd fxvncB"
      >
        0
      </p>
      <p
        className="sc-iCfMLu ceNQhQ"
      >
        TODAY
      </p>
    </div>
    <div
      className="sc-jRQBWg jCCcHD"
    >
      <p
        className="sc-gKclnd fxvncB"
      >
        0
      </p>
      <p
        className="sc-iCfMLu ceNQhQ"
      >
        2/13 - 2/19
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots CountPanelItem Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    className="sc-jRQBWg jCCcHD"
  >
    <p
      className="sc-gKclnd fxvncB"
    >
      0
    </p>
    <p
      className="sc-iCfMLu ceNQhQ"
    >
      TODAY
    </p>
  </div>
</div>
`;

exports[`Storyshots DateCountItem Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
>
  <div
    className="sc-crHmcD hGvKfC"
  >
    <div
      className="sc-jrQzAO gIhMrF"
    >
      <p
        className="sc-kDTinF dOXFGf"
      >
        5
      </p>
      <div
        className="sc-pVTFL iCgeqA"
      />
      <div
        className="sc-pVTFL iCgeqA"
      />
      <div
        className="sc-pVTFL iCgeqA"
      />
      <div
        className="sc-pVTFL iCgeqA"
      />
      <div
        className="sc-pVTFL iCgeqA"
      />
    </div>
    <div
      className="sc-iqseJM"
    >
      <p
        className="sc-iCfMLu ceNQhQ"
      >
        2/14
      </p>
      <p
        className="sc-iCfMLu ceNQhQ"
      >
        MON
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots DateCountItem No Tomato 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
>
  <div
    className="sc-crHmcD hGvKfC"
  >
    <div
      className="sc-jrQzAO gIhMrF"
    />
    <div
      className="sc-iqseJM"
    >
      <p
        className="sc-iCfMLu ceNQhQ"
      >
        2/14
      </p>
      <p
        className="sc-iCfMLu ceNQhQ"
      >
        MON
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots DateCountPanel Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    className="sc-egiyK lfayKR"
  >
    <div
      className="sc-crHmcD hGvKfC"
    >
      <div
        className="sc-jrQzAO gIhMrF"
      />
      <div
        className="sc-iqseJM"
      >
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          2/13
        </p>
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          SUN
        </p>
      </div>
    </div>
    <div
      className="sc-crHmcD hGvKfC"
    >
      <div
        className="sc-jrQzAO gIhMrF"
      >
        <p
          className="sc-kDTinF dOXFGf"
        >
          1
        </p>
        <div
          className="sc-pVTFL iCgeqA"
        />
      </div>
      <div
        className="sc-iqseJM"
      >
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          2/14
        </p>
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          MON
        </p>
      </div>
    </div>
    <div
      className="sc-crHmcD hGvKfC"
    >
      <div
        className="sc-jrQzAO gIhMrF"
      >
        <p
          className="sc-kDTinF dOXFGf"
        >
          2
        </p>
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
      </div>
      <div
        className="sc-iqseJM"
      >
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          2/15
        </p>
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          TUE
        </p>
      </div>
    </div>
    <div
      className="sc-crHmcD hGvKfC"
    >
      <div
        className="sc-jrQzAO gIhMrF"
      >
        <p
          className="sc-kDTinF dOXFGf"
        >
          3
        </p>
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
      </div>
      <div
        className="sc-iqseJM"
      >
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          2/16
        </p>
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          WED
        </p>
      </div>
    </div>
    <div
      className="sc-crHmcD hGvKfC"
    >
      <div
        className="sc-jrQzAO gIhMrF"
      >
        <p
          className="sc-kDTinF dOXFGf"
        >
          4
        </p>
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
      </div>
      <div
        className="sc-iqseJM"
      >
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          2/17
        </p>
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          THU
        </p>
      </div>
    </div>
    <div
      className="sc-crHmcD hGvKfC"
    >
      <div
        className="sc-jrQzAO gIhMrF"
      >
        <p
          className="sc-kDTinF dOXFGf"
        >
          5
        </p>
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
      </div>
      <div
        className="sc-iqseJM"
      >
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          2/18
        </p>
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          FRI
        </p>
      </div>
    </div>
    <div
      className="sc-crHmcD hGvKfC"
    >
      <div
        className="sc-jrQzAO gIhMrF"
      >
        <p
          className="sc-kDTinF dOXFGf"
        >
          6
        </p>
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
        <div
          className="sc-pVTFL iCgeqA"
        />
      </div>
      <div
        className="sc-iqseJM"
      >
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          2/19
        </p>
        <p
          className="sc-iCfMLu ceNQhQ"
        >
          SAT
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Label Default 1`] = `
<label
  className="sc-bqiRlB eVnNFY"
>
  TEST
</label>
`;

exports[`Storyshots PageButton Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <button
    className="sc-ksdxgE cVVRrG"
  />
</div>
`;

exports[`Storyshots Panel Ringtone 1`] = `
<div
  className="sc-ieecCq cSbpOy"
>
  <div
    className="sc-fotOHu hinGUI"
  >
    <button
      className="sc-hBUSln cEDDxB"
      onClick={[Function]}
    >
      WORK
    </button>
    <button
      className="sc-hBUSln imtplC"
      onClick={[Function]}
    >
      BREAK
    </button>
  </div>
  <ul
    className="sc-bkkeKt bRZQsF"
  >
    <li
      className="sc-fFeiMQ jzYpmo"
    >
      <div
        className="sc-dlVxhl jfnzXV"
      >
        <div
          className="sc-kfPuZi hkmBme"
          onClick={[Function]}
        >
          <div
            className="sc-iwjdpV eWEtlF"
          >
            <div
              className="sc-dJjYzT hcwjUW"
            />
          </div>
          <p
            className="sc-fKVqWL gHiGZE"
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            test1
          </p>
        </div>
        <div
          className="sc-bBHxTw hgPnvd"
        >
          <button
            className="sc-bdvvtL fZQeXN"
            onClick={[Function]}
          />
          <audio
            autoPlay={false}
            src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
          />
        </div>
      </div>
    </li>
    <li
      className="sc-fFeiMQ jzYpmo"
    >
      <div
        className="sc-dlVxhl jfnzXV"
      >
        <div
          className="sc-kfPuZi hkmBme"
          onClick={[Function]}
        >
          <div
            className="sc-iwjdpV eWEtlF"
          >
            <div
              className="sc-dJjYzT hcwjUW"
            />
          </div>
          <p
            className="sc-fKVqWL gHiGZE"
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            test2
          </p>
        </div>
        <div
          className="sc-bBHxTw hgPnvd"
        >
          <button
            className="sc-bdvvtL fZQeXN"
            onClick={[Function]}
          />
          <audio
            autoPlay={false}
            src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3"
          />
        </div>
      </div>
    </li>
    <li
      className="sc-fFeiMQ jzYpmo"
    >
      <div
        className="sc-dlVxhl jfnzXV"
      >
        <div
          className="sc-kfPuZi hkmBme"
          onClick={[Function]}
        >
          <div
            className="sc-iwjdpV eWEtlF"
          >
            <div
              className="sc-dJjYzT hcwjUW"
            />
          </div>
          <p
            className="sc-fKVqWL gHiGZE"
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            test3
          </p>
        </div>
        <div
          className="sc-bBHxTw hgPnvd"
        >
          <button
            className="sc-bdvvtL fZQeXN"
            onClick={[Function]}
          />
          <audio
            autoPlay={false}
            src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-3.mp3"
          />
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Panel Task 1`] = `
<div
  className="sc-ieecCq cSbpOy"
>
  <div
    className="sc-fotOHu hinGUI"
  >
    <button
      className="sc-hBUSln cEDDxB"
      onClick={[Function]}
    >
      TO DO
    </button>
    <button
      className="sc-hBUSln imtplC"
      onClick={[Function]}
    >
      DONE
    </button>
  </div>
  <ul
    className="sc-bkkeKt bRZQsF"
  >
    <li
      className="sc-fFeiMQ jzYpmo"
    >
      <div
        className="sc-ikJyIC kttgoj"
      >
        <div
          className="sc-dlVxhl jfnzXV"
        >
          <div
            className="sc-kfPuZi hkmBme"
          >
            <div>
              <p
                className="sc-fKVqWL gHiGZE"
              >
                todo 1
              </p>
              <div
                className="sc-hGPBjI hJMqIh"
              >
                <div
                  className="sc-dJjYzT hcwjUW"
                />
                <div
                  className="sc-dJjYzT hcwjUW"
                />
                <div
                  className="sc-dJjYzT hcwjUW"
                />
                <div
                  className="sc-dJjYzT hcwjUW"
                />
                <div
                  className="sc-dJjYzT hcwjUW"
                />
              </div>
            </div>
          </div>
          <div
            className="sc-bBHxTw hgPnvd"
          >
            <button
              className="sc-cxpSdN sc-iJKOTD fMDwaC eqyRfV"
              onClick={[Function]}
            >
              ...
            </button>
          </div>
        </div>
      </div>
    </li>
    <li
      className="sc-fFeiMQ jzYpmo"
    >
      <div
        className="sc-ikJyIC kttgoj"
      >
        <div
          className="sc-dlVxhl jfnzXV"
        >
          <div
            className="sc-kfPuZi hkmBme"
          >
            <div>
              <p
                className="sc-fKVqWL gHiGZE"
              >
                todo 2
              </p>
              <div
                className="sc-hGPBjI hJMqIh"
              >
                <div
                  className="sc-dJjYzT hcwjUW"
                />
                <div
                  className="sc-dJjYzT hcwjUW"
                />
                <div
                  className="sc-dJjYzT hcwjUW"
                />
                <div
                  className="sc-dJjYzT hcwjUW"
                />
                <div
                  className="sc-dJjYzT hcwjUW"
                />
              </div>
            </div>
          </div>
          <div
            className="sc-bBHxTw hgPnvd"
          >
            <button
              className="sc-cxpSdN sc-iJKOTD fMDwaC eqyRfV"
              onClick={[Function]}
            >
              ...
            </button>
          </div>
        </div>
      </div>
    </li>
    <li
      className="sc-fFeiMQ jzYpmo"
    >
      <div
        className="sc-ikJyIC kttgoj"
      >
        <div
          className="sc-dlVxhl jfnzXV"
        >
          <div
            className="sc-kfPuZi hkmBme"
          >
            <div>
              <p
                className="sc-fKVqWL gHiGZE"
              >
                todo 3
              </p>
              <div
                className="sc-hGPBjI hJMqIh"
              >
                <div
                  className="sc-dJjYzT hcwjUW"
                />
                <div
                  className="sc-dJjYzT hcwjUW"
                />
                <div
                  className="sc-dJjYzT hcwjUW"
                />
                <div
                  className="sc-dJjYzT hcwjUW"
                />
                <div
                  className="sc-dJjYzT hcwjUW"
                />
              </div>
            </div>
          </div>
          <div
            className="sc-bBHxTw hgPnvd"
          >
            <button
              className="sc-cxpSdN sc-iJKOTD fMDwaC eqyRfV"
              onClick={[Function]}
            >
              ...
            </button>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots PanelItem Default 1`] = `
<li
  className="sc-fFeiMQ jzYpmo"
>
  <h3>
    Hello World
  </h3>
</li>
`;

exports[`Storyshots PanelList Default 1`] = `
<ul
  className="sc-bkkeKt bRZQsF"
>
  <li
    className="sc-fFeiMQ jzYpmo"
  >
    1
  </li>
  <li
    className="sc-fFeiMQ jzYpmo"
  >
    2
  </li>
  <li
    className="sc-fFeiMQ jzYpmo"
  >
    3
  </li>
</ul>
`;

exports[`Storyshots Pie Children 1`] = `
<div
  className="sc-jJoQJp ioWQL"
  color="#ea5548"
>
  <div
    className="sc-hiCibw eyIAgM"
    color="#ea5548"
  />
  <div
    className="sc-gWXbKe cosIvp"
  >
    <p
      style={
        Object {
          "margin": "0",
        }
      }
    >
      children
    </p>
  </div>
</div>
`;

exports[`Storyshots Pie Default 1`] = `
<div
  className="sc-jJoQJp ioWQL"
  color="#ea5548"
>
  <div
    className="sc-hiCibw brCftc"
    color="#ea5548"
  />
  <div
    className="sc-gWXbKe cosIvp"
  />
</div>
`;

exports[`Storyshots PlayButton Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <button
    className="sc-cCcXHH ccrgoN"
    onClick={[Function]}
  />
</div>
`;

exports[`Storyshots Record Completed 1`] = `
<div
  className="sc-dJjYzT bVXMT"
/>
`;

exports[`Storyshots Record Default 1`] = `
<div
  className="sc-dJjYzT hcwjUW"
/>
`;

exports[`Storyshots RecordGroup Default 1`] = `
<div
  className="sc-hGPBjI hJMqIh"
>
  <div
    className="sc-dJjYzT hcwjUW"
  />
  <div
    className="sc-dJjYzT hcwjUW"
  />
  <div
    className="sc-dJjYzT hcwjUW"
  />
  <div
    className="sc-dJjYzT hcwjUW"
  />
  <div
    className="sc-dJjYzT hcwjUW"
  />
</div>
`;

exports[`Storyshots RingtoneItem Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
>
  <div
    className="sc-dlVxhl jfnzXV"
  >
    <div
      className="sc-kfPuZi hkmBme"
      onClick={[Function]}
    >
      <div
        className="sc-iwjdpV eWEtlF"
      >
        <div
          className="sc-dJjYzT hcwjUW"
        />
      </div>
      <p
        className="sc-fKVqWL gHiGZE"
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        test
      </p>
    </div>
    <div
      className="sc-bBHxTw hgPnvd"
    >
      <button
        className="sc-bdvvtL fZQeXN"
        onClick={[Function]}
      />
      <audio
        autoPlay={false}
        src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-13.mp3"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots RingtonePanelList Default 1`] = `
<ul
  className="sc-bkkeKt bRZQsF"
>
  <li
    className="sc-fFeiMQ jzYpmo"
  >
    <div
      className="sc-dlVxhl jfnzXV"
    >
      <div
        className="sc-kfPuZi hkmBme"
        onClick={[Function]}
      >
        <div
          className="sc-iwjdpV eWEtlF"
        >
          <div
            className="sc-dJjYzT hcwjUW"
          />
        </div>
        <p
          className="sc-fKVqWL gHiGZE"
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          test1
        </p>
      </div>
      <div
        className="sc-bBHxTw hgPnvd"
      >
        <button
          className="sc-bdvvtL fZQeXN"
          onClick={[Function]}
        />
        <audio
          autoPlay={false}
          src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
        />
      </div>
    </div>
  </li>
  <li
    className="sc-fFeiMQ jzYpmo"
  >
    <div
      className="sc-dlVxhl jfnzXV"
    >
      <div
        className="sc-kfPuZi hkmBme"
        onClick={[Function]}
      >
        <div
          className="sc-iwjdpV eWEtlF"
        >
          <div
            className="sc-dJjYzT hcwjUW"
          />
        </div>
        <p
          className="sc-fKVqWL gHiGZE"
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          test2
        </p>
      </div>
      <div
        className="sc-bBHxTw hgPnvd"
      >
        <button
          className="sc-bdvvtL fZQeXN"
          onClick={[Function]}
        />
        <audio
          autoPlay={false}
          src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3"
        />
      </div>
    </div>
  </li>
  <li
    className="sc-fFeiMQ jzYpmo"
  >
    <div
      className="sc-dlVxhl jfnzXV"
    >
      <div
        className="sc-kfPuZi hkmBme"
        onClick={[Function]}
      >
        <div
          className="sc-iwjdpV eWEtlF"
        >
          <div
            className="sc-dJjYzT hcwjUW"
          />
        </div>
        <p
          className="sc-fKVqWL gHiGZE"
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          test3
        </p>
      </div>
      <div
        className="sc-bBHxTw hgPnvd"
      >
        <button
          className="sc-bdvvtL fZQeXN"
          onClick={[Function]}
        />
        <audio
          autoPlay={false}
          src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-3.mp3"
        />
      </div>
    </div>
  </li>
</ul>
`;

exports[`Storyshots Tab Active 1`] = `
<button
  className="sc-hBUSln cEDDxB"
  onClick={[Function]}
>
  TEST
</button>
`;

exports[`Storyshots Tab Default 1`] = `
<button
  className="sc-hBUSln imtplC"
  onClick={[Function]}
>
  
</button>
`;

exports[`Storyshots Tab Wording 1`] = `
<button
  className="sc-hBUSln imtplC"
  onClick={[Function]}
>
  TEST
</button>
`;

exports[`Storyshots TaskItem Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-ikJyIC kttgoj"
  >
    <div
      className="sc-dlVxhl jfnzXV"
    >
      <div
        className="sc-kfPuZi hkmBme"
      >
        <div>
          <p
            className="sc-fKVqWL gHiGZE"
          >
            test
          </p>
          <div
            className="sc-hGPBjI hJMqIh"
          >
            <div
              className="sc-dJjYzT hcwjUW"
            />
            <div
              className="sc-dJjYzT hcwjUW"
            />
            <div
              className="sc-dJjYzT hcwjUW"
            />
            <div
              className="sc-dJjYzT hcwjUW"
            />
            <div
              className="sc-dJjYzT hcwjUW"
            />
          </div>
        </div>
      </div>
      <div
        className="sc-bBHxTw hgPnvd"
      >
        <button
          className="sc-cxpSdN sc-iJKOTD fMDwaC eqyRfV"
          onClick={[Function]}
        >
          ...
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItem Done 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-ikJyIC kttgoj"
  >
    <div
      className="sc-dlVxhl jfnzXV"
    >
      <div
        className="sc-kfPuZi hkmBme"
      >
        <div
          className="sc-iwjdpV eWEtlF"
        >
          <img
            alt=""
            src="complete.svg"
          />
        </div>
        <div>
          <p
            className="sc-fKVqWL gHiGZE"
          >
            test
          </p>
          <div
            className="sc-hGPBjI hJMqIh"
          >
            <div
              className="sc-dJjYzT hcwjUW"
            />
            <div
              className="sc-dJjYzT hcwjUW"
            />
            <div
              className="sc-dJjYzT hcwjUW"
            />
            <div
              className="sc-dJjYzT hcwjUW"
            />
            <div
              className="sc-dJjYzT hcwjUW"
            />
          </div>
        </div>
      </div>
      <div
        className="sc-bBHxTw hgPnvd"
      >
        <button
          className="sc-cxpSdN sc-iJKOTD fMDwaC eqyRfV"
          onClick={[Function]}
        >
          ...
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItem Opened 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-ikJyIC kttgoj"
  >
    <div
      className="sc-dlVxhl jfnzXV"
    >
      <div
        className="sc-kfPuZi hkmBme"
      >
        <div>
          <p
            className="sc-fKVqWL gHiGZE"
          >
            test
          </p>
          <div
            className="sc-hGPBjI hJMqIh"
          >
            <div
              className="sc-dJjYzT hcwjUW"
            />
            <div
              className="sc-dJjYzT hcwjUW"
            />
            <div
              className="sc-dJjYzT hcwjUW"
            />
            <div
              className="sc-dJjYzT hcwjUW"
            />
            <div
              className="sc-dJjYzT hcwjUW"
            />
          </div>
        </div>
      </div>
      <div
        className="sc-bBHxTw hgPnvd"
      >
        <button
          className="sc-cxpSdN sc-iJKOTD fMDwaC cvSDFE"
          onClick={[Function]}
        >
          ...
        </button>
      </div>
    </div>
    <hr />
    <div
      className="sc-kLwhqv gzOWVo"
    >
      <div>
        <label
          className="sc-bqiRlB eVnNFY"
        >
          TASK TITLE
        </label>
        <input
          className="sc-giYglK eEPJRC"
          onChange={[Function]}
          type="text"
          value="test"
        />
      </div>
      <div>
        <label
          className="sc-bqiRlB eVnNFY"
        >
          ESTIMATED TOMATO
        </label>
        <div
          className="sc-bYoBSM evGowd"
          onClick={[Function]}
        >
          <button
            className="sc-ezbkAF jcheaw"
            data-number={1}
          />
          <button
            className="sc-ezbkAF jcheaw"
            data-number={2}
          />
          <button
            className="sc-ezbkAF jcheaw"
            data-number={3}
          />
          <button
            className="sc-ezbkAF jcheaw"
            data-number={4}
          />
          <button
            className="sc-ezbkAF jcheaw"
            data-number={5}
          />
          <button
            className="sc-ezbkAF jcheaw"
            data-number={6}
          />
          <button
            className="sc-ezbkAF jcheaw"
            data-number={7}
          />
          <button
            className="sc-ezbkAF jcheaw"
            data-number={8}
          />
          <button
            className="sc-ezbkAF jcheaw"
            data-number={9}
          />
          <button
            className="sc-ezbkAF jcheaw"
            data-number={10}
          />
        </div>
      </div>
      <div
        className="sc-hKwDye faWgkr"
      >
        <button
          className="sc-dkPtRN bvmbqx"
          data-large={false}
          onClick={[Function]}
        >
          DELETE
        </button>
        <button
          className="sc-dkPtRN doeNQV"
          data-large={true}
          onClick={[Function]}
        >
          SAVE
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItemOperate/DoneTask Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-kLwhqv gzOWVo"
  >
    <div
      className="sc-hKwDye faWgkr"
    >
      <button
        className="sc-dkPtRN bvmbqx"
        data-large={false}
        onClick={[Function]}
      >
        DELETE
      </button>
      <button
        className="sc-dkPtRN doeNQV"
        data-large={true}
        onClick={[Function]}
      >
        REDO
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItemOperate/TodoTask Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-kLwhqv gzOWVo"
  >
    <div>
      <label
        className="sc-bqiRlB eVnNFY"
      >
        TASK TITLE
      </label>
      <input
        className="sc-giYglK eEPJRC"
        onChange={[Function]}
        type="text"
        value="test"
      />
    </div>
    <div>
      <label
        className="sc-bqiRlB eVnNFY"
      >
        ESTIMATED TOMATO
      </label>
      <div
        className="sc-bYoBSM evGowd"
        onClick={[Function]}
      >
        <button
          className="sc-ezbkAF jcheaw"
          data-number={1}
        />
        <button
          className="sc-ezbkAF jcheaw"
          data-number={2}
        />
        <button
          className="sc-ezbkAF jcheaw"
          data-number={3}
        />
        <button
          className="sc-ezbkAF jcheaw"
          data-number={4}
        />
        <button
          className="sc-ezbkAF jcheaw"
          data-number={5}
        />
        <button
          className="sc-ezbkAF jcheaw"
          data-number={6}
        />
        <button
          className="sc-ezbkAF jcheaw"
          data-number={7}
        />
        <button
          className="sc-ezbkAF jcheaw"
          data-number={8}
        />
        <button
          className="sc-ezbkAF jcheaw"
          data-number={9}
        />
        <button
          className="sc-ezbkAF jcheaw"
          data-number={10}
        />
      </div>
    </div>
    <div
      className="sc-hKwDye faWgkr"
    >
      <button
        className="sc-dkPtRN bvmbqx"
        data-large={false}
        onClick={[Function]}
      >
        DELETE
      </button>
      <button
        className="sc-dkPtRN doeNQV"
        data-large={true}
        onClick={[Function]}
      >
        SAVE
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItemTitle Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
>
  <div
    className="sc-dlVxhl jfnzXV"
  >
    <div
      className="sc-kfPuZi hkmBme"
    >
      <div>
        <p
          className="sc-fKVqWL gHiGZE"
        >
          test
        </p>
        <div
          className="sc-hGPBjI hJMqIh"
        >
          <div
            className="sc-dJjYzT hcwjUW"
          />
          <div
            className="sc-dJjYzT hcwjUW"
          />
          <div
            className="sc-dJjYzT hcwjUW"
          />
          <div
            className="sc-dJjYzT hcwjUW"
          />
          <div
            className="sc-dJjYzT hcwjUW"
          />
        </div>
      </div>
    </div>
    <div
      className="sc-bBHxTw hgPnvd"
    >
      <button
        className="sc-cxpSdN sc-iJKOTD fMDwaC eqyRfV"
        onClick={[Function]}
      >
        ...
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItemTitle Done 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
>
  <div
    className="sc-dlVxhl jfnzXV"
  >
    <div
      className="sc-kfPuZi hkmBme"
    >
      <div
        className="sc-iwjdpV eWEtlF"
      >
        <img
          alt=""
          src="complete.svg"
        />
      </div>
      <div>
        <p
          className="sc-fKVqWL gHiGZE"
        >
          test
        </p>
        <div
          className="sc-hGPBjI hJMqIh"
        >
          <div
            className="sc-dJjYzT hcwjUW"
          />
          <div
            className="sc-dJjYzT hcwjUW"
          />
          <div
            className="sc-dJjYzT hcwjUW"
          />
          <div
            className="sc-dJjYzT hcwjUW"
          />
          <div
            className="sc-dJjYzT hcwjUW"
          />
        </div>
      </div>
    </div>
    <div
      className="sc-bBHxTw hgPnvd"
    >
      <button
        className="sc-cxpSdN sc-iJKOTD fMDwaC eqyRfV"
        onClick={[Function]}
      >
        ...
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskPanelList Default 1`] = `
<ul
  className="sc-bkkeKt bRZQsF"
>
  <li
    className="sc-fFeiMQ jzYpmo"
  >
    <div
      className="sc-ikJyIC kttgoj"
    >
      <div
        className="sc-dlVxhl jfnzXV"
      >
        <div
          className="sc-kfPuZi hkmBme"
        >
          <div>
            <p
              className="sc-fKVqWL gHiGZE"
            >
              test1
            </p>
            <div
              className="sc-hGPBjI hJMqIh"
            >
              <div
                className="sc-dJjYzT bVXMT"
              />
              <div
                className="sc-dJjYzT bVXMT"
              />
              <div
                className="sc-dJjYzT hcwjUW"
              />
              <div
                className="sc-dJjYzT hcwjUW"
              />
              <div
                className="sc-dJjYzT hcwjUW"
              />
            </div>
          </div>
        </div>
        <div
          className="sc-bBHxTw hgPnvd"
        >
          <button
            className="sc-cxpSdN sc-iJKOTD fMDwaC eqyRfV"
            onClick={[Function]}
          >
            ...
          </button>
        </div>
      </div>
    </div>
  </li>
  <li
    className="sc-fFeiMQ jzYpmo"
  >
    <div
      className="sc-ikJyIC kttgoj"
    >
      <div
        className="sc-dlVxhl jfnzXV"
      >
        <div
          className="sc-kfPuZi hkmBme"
        >
          <div>
            <p
              className="sc-fKVqWL gHiGZE"
            >
              test2
            </p>
            <div
              className="sc-hGPBjI hJMqIh"
            >
              <div
                className="sc-dJjYzT hcwjUW"
              />
              <div
                className="sc-dJjYzT hcwjUW"
              />
              <div
                className="sc-dJjYzT hcwjUW"
              />
              <div
                className="sc-dJjYzT hcwjUW"
              />
              <div
                className="sc-dJjYzT hcwjUW"
              />
              <div
                className="sc-dJjYzT hcwjUW"
              />
            </div>
          </div>
        </div>
        <div
          className="sc-bBHxTw hgPnvd"
        >
          <button
            className="sc-cxpSdN sc-iJKOTD fMDwaC eqyRfV"
            onClick={[Function]}
          >
            ...
          </button>
        </div>
      </div>
    </div>
  </li>
  <li
    className="sc-fFeiMQ jzYpmo"
  >
    <div
      className="sc-ikJyIC kttgoj"
    >
      <div
        className="sc-dlVxhl jfnzXV"
      >
        <div
          className="sc-kfPuZi hkmBme"
        >
          <div>
            <p
              className="sc-fKVqWL gHiGZE"
            >
              test3
            </p>
            <div
              className="sc-hGPBjI hJMqIh"
            >
              <div
                className="sc-dJjYzT hcwjUW"
              />
              <div
                className="sc-dJjYzT hcwjUW"
              />
              <div
                className="sc-dJjYzT hcwjUW"
              />
            </div>
          </div>
        </div>
        <div
          className="sc-bBHxTw hgPnvd"
        >
          <button
            className="sc-cxpSdN sc-iJKOTD fMDwaC eqyRfV"
            onClick={[Function]}
          >
            ...
          </button>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Storyshots TextInput Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <input
    className="sc-giYglK eEPJRC"
    onChange={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots TextInput Password 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <input
    className="sc-giYglK eEPJRC"
    onChange={[Function]}
    type="password"
    value=""
  />
</div>
`;

exports[`Storyshots Timer Default 1`] = `
<div
  className="sc-cidDSM"
>
  00:00
</div>
`;

exports[`Storyshots TimerPie Default 1`] = `
<div
  className="sc-jJoQJp ioWQL"
  color="#ea5548"
>
  <div
    className="sc-hiCibw eROYkq"
    color="#ea5548"
  />
  <div
    className="sc-gWXbKe cosIvp"
  >
    <div
      className="sc-jcFjpl kwdBgk"
    >
      <div
        className="sc-cidDSM"
      >
        00:50
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TimerSection Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#eaeaea",
    }
  }
>
  <div>
    <div>
      POMODORO
    </div>
    <p>
      You don't have any task now,
      <br />
      please add task first!
    </p>
  </div>
</div>
`;

exports[`Storyshots TimerSection Task 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#eaeaea",
    }
  }
>
  <div>
    <div>
      <p>
        Test
      </p>
      <div
        className="sc-hGPBjI hJMqIh"
      >
        <div
          className="sc-dJjYzT bVXMT"
        />
        <div
          className="sc-dJjYzT hcwjUW"
        />
        <div
          className="sc-dJjYzT hcwjUW"
        />
        <div
          className="sc-dJjYzT hcwjUW"
        />
        <div
          className="sc-dJjYzT hcwjUW"
        />
      </div>
    </div>
    <div
      className="sc-jJoQJp ioWQL"
      color="#ea5548"
    >
      <div
        className="sc-hiCibw cFQexV"
        color="#ea5548"
      />
      <div
        className="sc-gWXbKe cosIvp"
      >
        <div
          className="sc-jcFjpl kwdBgk"
        >
          <div
            className="sc-cidDSM"
          >
            04:00
          </div>
        </div>
      </div>
    </div>
    <div>
      <button
        className="sc-cCcXHH ccrgoN"
        onClick={[Function]}
      />
      <button
        className="sc-cCcXHH fWNnMf"
        onClick={[Function]}
      />
      <button
        className="sc-cCcXHH clylPg"
        onClick={[Function]}
      />
    </div>
    <button
      className="sc-eCImPb CimIN"
    >
      TASK COMPLETED
    </button>
  </div>
</div>
`;

exports[`Storyshots Title Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-caiLqq jfNfQG"
  >
    <h1
      className="sc-iUKqMP ckUCGs"
    >
      TEST
    </h1>
    <hr />
  </div>
</div>
`;

exports[`Storyshots ToggleButton Default 1`] = `
<button
  className="sc-cxpSdN sc-iJKOTD fMDwaC eqyRfV"
  onClick={[Function]}
>
  ...
</button>
`;

exports[`Storyshots ToggleButton Primary 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <button
    className="sc-cxpSdN sc-llYSUQ fMDwaC dnJRqd"
    onClick={[Function]}
  >
    <img
      alt=""
      data-image="tomato"
      src="tomato_small_color.svg"
    />
    <img
      alt=""
      data-image="arrow"
      src="arrow.svg"
    />
  </button>
</div>
`;

exports[`Storyshots TomatoButton Active 1`] = `
<button
  className="sc-ezbkAF eeVjfY"
/>
`;

exports[`Storyshots TomatoButton Default 1`] = `
<button
  className="sc-ezbkAF jcheaw"
/>
`;

exports[`Storyshots TomatoButtonGroup Default 1`] = `
<div
  className="sc-bYoBSM evGowd"
  onClick={[Function]}
>
  <button
    className="sc-ezbkAF jcheaw"
    data-number={1}
  />
  <button
    className="sc-ezbkAF jcheaw"
    data-number={2}
  />
  <button
    className="sc-ezbkAF jcheaw"
    data-number={3}
  />
  <button
    className="sc-ezbkAF jcheaw"
    data-number={4}
  />
  <button
    className="sc-ezbkAF jcheaw"
    data-number={5}
  />
  <button
    className="sc-ezbkAF jcheaw"
    data-number={6}
  />
  <button
    className="sc-ezbkAF jcheaw"
    data-number={7}
  />
  <button
    className="sc-ezbkAF jcheaw"
    data-number={8}
  />
  <button
    className="sc-ezbkAF jcheaw"
    data-number={9}
  />
  <button
    className="sc-ezbkAF jcheaw"
    data-number={10}
  />
</div>
`;

exports[`Storyshots TomatoButtonGroup Default Selected Number 1`] = `
<div
  className="sc-bYoBSM evGowd"
  onClick={[Function]}
>
  <button
    className="sc-ezbkAF eeVjfY"
    data-number={1}
  />
  <button
    className="sc-ezbkAF eeVjfY"
    data-number={2}
  />
  <button
    className="sc-ezbkAF eeVjfY"
    data-number={3}
  />
  <button
    className="sc-ezbkAF jcheaw"
    data-number={4}
  />
  <button
    className="sc-ezbkAF jcheaw"
    data-number={5}
  />
  <button
    className="sc-ezbkAF jcheaw"
    data-number={6}
  />
  <button
    className="sc-ezbkAF jcheaw"
    data-number={7}
  />
  <button
    className="sc-ezbkAF jcheaw"
    data-number={8}
  />
  <button
    className="sc-ezbkAF jcheaw"
    data-number={9}
  />
  <button
    className="sc-ezbkAF jcheaw"
    data-number={10}
  />
</div>
`;
